Fix header link media query to match wrapped product name
The link was given `display: inline` at tablet sizes but the product name doesn’t wrap until desktop: https://github.com/alphagov/govuk-frontend/pull/2549

--- a/packages/govuk-frontend/src/govuk/components/header/_index.scss
+++ b/packages/govuk-frontend/src/govuk/components/header/_index.scss
@@ -115,7 +115,7 @@
     margin-right: govuk-spacing(2);
     font-size: 30px; // We don't have a mixin that produces 30px font size
 
-    @include govuk-media-query($from: tablet) {
+    @include govuk-media-query($from: desktop) {
       display: inline;
 
       &:focus {
